--- a/vueloApp/templates/inicio.html
+++ b/vueloApp/templates/inicio.html
@@ -31,7 +31,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link text-white" href="{% url 'destinos' %}"
-                >Destinos</a
+                >Vuelos</a
               >
             </li>
             <li class="nav-item">
