proyecto con rest-framework

--- a/vueloApp/templates/destinos.html
+++ b/vueloApp/templates/destinos.html
@@ -1,8 +1,8 @@
+{% extends 'inicio.html' %} {% block content %}
+<h1 class="text-white border rounded bg-primary">Vuelos Activos en Aeropuerto</h1>
 
-{% extends 'inicio.html' %}
+<!-- Mostrar vuelos de la API -->
 
-{% block content %}
-<h2>Vuelos en Aeropuertos</h2>
 <table class="table table-striped">
   <thead>
     <tr>
