--- a/vueloApp/templates/eliminar_boleto.html
+++ b/vueloApp/templates/eliminar_boleto.html
@@ -20,7 +20,7 @@
                 {% csrf_token %}
                 <button type="submit" class="btn btn-danger">Eliminar</button>
             </form>
-            <a href="{% url 'vista_boletos' %}" class="btn btn-secondary">Cancelar</a>
+            <a href="{% url 'vista_boletos' %}" class="btn btn-success">Cancelar</a>
         </div>
     </div>
 </div>
