--- a/vueloApp/templates/aerolineas.html
+++ b/vueloApp/templates/aerolineas.html
@@ -1,6 +1,6 @@
 {% extends 'inicio.html' %} {% load static %} {% block content %}
 <div class="container mt-5">
-  <h2 class="text-center mb-4">Aerolíneas</h2>
+  <h1 class="text-center mb-4 text-white border rounded bg-primary rounder-2">Aerolíneas</h1>
   <div class="row">
     {% for aerolinea in aerolineas %}
     <div class="col-md-4 mb-4">
