--- a/vueloApp/templates/contacto.html
+++ b/vueloApp/templates/contacto.html
@@ -50,8 +50,8 @@
         </div>
         {% endif %}
       </div>
-      <button type="submit" class="btn btn-success">Enviar</button>
-      <a href="{% url 'inicio' %}" class="btn btn-secondary">Cancelar</a>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+      <a href="{% url 'inicio' %}" class="btn btn-success">Cancelar</a>
     </form>
   </div>
 </div>
