--- a/vueloApp/templates/inicio.html
+++ b/vueloApp/templates/inicio.html
@@ -11,12 +11,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static 'styles/estilo.css' %}" />
+    <style>
+      /* Establecer fondo2.jpg como fondo de pantalla */
+      body {
+        background-image: url("{% static 'fondo2.jpg' %}");
+        background-size: cover; /* Asegura que el fondo cubra toda la pantalla */
+        background-position: center; /* Centra el fondo */
+        background-attachment: fixed; /* Hace que el fondo se quede fijo al hacer scroll */
+      }
+    </style>
   </head>
   <body>
     {% if messages %} {% for message in messages %}
     <div class="alert alert-success" role="alert">{{ message }}</div>
     {% endfor %} {% endif %}
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg mb-2">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'inicio' %}">
           <img
@@ -54,10 +63,15 @@
                 >Ver Boleto</a
               >
             </li>
+            <li class="pack-promocion-container">
+              <a href="{% url 'pack_promocion' %}" class="pack-promocion-link"
+                >PACK-PROMOCION</a
+              >
+            </li>            
           </ul>
         </div>
         <div class="ms-auto d-flex align-items-center">
-          <span class="text-white me-3">Hola, {{ user.username }}</span>
+          <span class="text-white me-3">Hola, {{ request.user.username }}</span>
           <form method="post" action="{% url 'logout' %}">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger">Cerrar Sesión</button>
@@ -65,8 +79,9 @@
         </div>
       </div>
     </nav>
-    
-    <div class="container-inicio mt-4">{% block content %} {% endblock %}</div>
+
+    <div class="container-inicio">{% block content %} {% endblock %}</div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+NGltVq4p4HY+hZxPyyZ+BO4Z3Ze"
